9/7 회원가입 작성 화면 완성     필드별 유효성 검사 js로 완성

--- a/BookMyShow/src/main/webapp/resources/css/index.css
+++ b/BookMyShow/src/main/webapp/resources/css/index.css
@@ -259,7 +259,12 @@ a:hover, card:hover, .btn:hover {
     padding: 0;
 }
 
-
+.site-logo {
+    text-decoration: none;
+    color: #ff4b4b;
+    font-size: 30px;
+    font-weight: bold;
+}
 
 
 
