--- a/BookMyShow/src/main/webapp/resources/css/login.css
+++ b/BookMyShow/src/main/webapp/resources/css/login.css
@@ -72,6 +72,11 @@
     text-decoration: none;
 }
 
-
+.site-logo {
+    text-decoration: none;
+    color: #ff4b4b;
+    font-size: 30px;
+    font-weight: bold;
+}
 
 
