--- a/BookMyShow/src/main/webapp/WEB-INF/views/main/index.html
+++ b/BookMyShow/src/main/webapp/WEB-INF/views/main/index.html
@@ -25,7 +25,7 @@
             <!-- Dropdown menu -->
             <div class="dropdown-menu shadow border-0 " id="cs-dropdown-menu">
                 <div class="h-100 d-flex row justify-content-between align-items-center">
-                    <div class="w-100"><a class="text-decoration-none text-dark" href="#">공지사항</a></div>
+                    <div class="w-100"><a class="text-decoration-none text-dark" href="">공지사항</a></div>
                     <div><a class="text-decoration-none text-dark" href="#">FAQ</a></div>
                     <div><a class="text-decoration-none text-dark" href="/support/faq">1:1문의</a></div>
                 </div>
