--- a/BookMyShow/src/main/webapp/resources/css/notice.css
+++ b/BookMyShow/src/main/webapp/resources/css/notice.css
@@ -1,6 +1,6 @@
 #noticenum {
     text-align: center;
-    padding: 0 0 30px 0;
+    padding: 0 0 30px 220px;
 }
 
 .pgnum, .now, .next {
@@ -8,18 +8,55 @@
     padding-right: 5px; 
     color: #000;
     font-size: 14px;
-    padding: 5px 9px;
+    padding: 5px 10px;
     margin: 0 2px;
     background: #eee;
     border:2px solid #fff;
     text-decoration: none;
+    border-radius: 5px; 
+}
+
+.now {
+	font-weight: bold;
+	color: #242244;
+}
+
+.next {
+	font-weight: bold;
+	color: #242244;
+}
+
+.notice-header {
+	list-style: none;
+    margin-top: 24px;
+    height: 40px;
+    background: #dbdbff;
+    border-radius: 8px;
+}
+
+.notice-header li {
+    float: left;
+    padding-top: 11px;
+    text-align: center;
+    font-size: 15px;
+    color: #333;
+    font-weight: 600;
 }
 
 a{
 	text-decoration: none;
 }
 
-a:visited{
+a:visited {
 	color: #000;
 	text-decoration: none;
 }
+
+.noticelist{
+	font-weight: bold;
+	font-size: 22px;
+	color: #8080c0;
+	text-decoration: none;
+}
+
+
